移除lvgl，使用canmv中lcd driver 驱动

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,8 @@
         "xlocnum": "cpp",
         "xmemory": "cpp",
         "xstddef": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "bsp.h": "c"
     },
     "cmake.additionalCompilerSearchDirs": [
         "E:\\MCU\\K210\\kendryte-toolchain\\bin"
